// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Card Snapshot > рендерится без заголовка 1`] = `
<div>
  <div
    class="rounded-lg border bg-card text-card-foreground shadow-sm"
  >
    <div
      class="p-6 pt-0"
    >
      <p>
        Card content
      </p>
    </div>
  </div>
</div>
`;

exports[`Card Snapshot > рендерится с footer 1`] = `
<div>
  <div
    class="rounded-lg border bg-card text-card-foreground shadow-sm"
  >
    <div
      class="flex flex-col space-y-1.5 p-6"
    >
      <h3
        class="text-2xl font-semibold leading-none tracking-tight"
      >
        Actions Card
      </h3>
    </div>
    <div
      class="p-6 pt-0"
    >
      <p>
        Card with actions
      </p>
    </div>
    <div
      class="flex items-center p-6 pt-0"
    >
      <button>
        Action
      </button>
    </div>
  </div>
</div>
`;

exports[`Card Snapshot > рендерится с заголовком 1`] = `
<div>
  <div
    class="rounded-lg border bg-card text-card-foreground shadow-sm"
  >
    <div
      class="flex flex-col space-y-1.5 p-6"
    >
      <h3
        class="text-2xl font-semibold leading-none tracking-tight"
      >
        Test Card
      </h3>
    </div>
    <div
      class="p-6 pt-0"
    >
      <p>
        Card content
      </p>
    </div>
  </div>
</div>
`;

exports[`Card Snapshot > рендерится с кастомными классами 1`] = `
<div>
  <div
    class="rounded-lg border text-card-foreground shadow-sm bg-blue-100"
  >
    <div
      class="flex flex-col space-y-1.5 p-6 bg-blue-50"
    >
      <h3
        class="text-2xl font-semibold leading-none tracking-tight text-blue-900"
      >
        Custom Card
      </h3>
    </div>
    <div
      class="p-6 pt-0"
    >
      <p>
        Custom styled content
      </p>
    </div>
  </div>
</div>
`;

exports[`Card Snapshot > рендерится с описанием 1`] = `
<div>
  <div
    class="rounded-lg border bg-card text-card-foreground shadow-sm"
  >
    <div
      class="flex flex-col space-y-1.5 p-6"
    >
      <h3
        class="text-2xl font-semibold leading-none tracking-tight"
      >
        Analytics
      </h3>
      <p>
        Analytics description
      </p>
    </div>
    <div
      class="p-6 pt-0"
    >
      <p>
        Analytics content
      </p>
    </div>
  </div>
</div>
`;
